# python-test-repo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
rpi_monitoring_dashboard/: dashboard.html  get-coords.sh  nginx-conf  pi_monitor.py  pi_monitor.service  save-coords.sh  script.js  script_tmp.js  setup_camera_dashboard.sh  style_tmp.css  styles.css  video-explorer.sh
