[project]
name = "python-test-repo"
version = "0.1.0"
description = "A test Python project with automatic GitHub releases and changelogs"
authors = [
  { name = "Arpit Gupta", email = "arpit.g@chalo.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

